@@ -11,8 +11,9 @@ import usi.si.seart.model.view.TopicView;
 import usi.si.seart.repository.TopicRepository;
 import usi.si.seart.repository.TopicViewRepository;
 
-import jakarta.validation.constraints.NotNull;
+import javax.validation.constraints.NotNull;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 public interface TopicService extends NamedEntityService<Topic> {
 
@@ -40,7 +41,7 @@ public interface TopicService extends NamedEntityService<Topic> {
         public Collection<Topic> getRanked() {
             Collection<String> names = topicViewRepository.findAll(pageable).stream()
                     .map(TopicView::getName)
-                    .toList();
+                    .collect(Collectors.toList());
             return topicRepository.findAllByNameIn(names);
         }
     }
